# custom-mcp-servers

./: .gitignore  README.md
clockify/: README.md  pyproject.toml  server.py
github/: README.md  pyproject.toml  server.py
gmail/: README.md  auth.py  pyproject.toml  server.py
google_chat/: README.md  auth.py  pyproject.toml  server.py
harvest/: README.md  pyproject.toml  server.py
jira/: README.md  pyproject.toml  server.py
looker/: README.md  pyproject.toml  server.py
tableau/: README.md  pyproject.toml  server.py
upwork/: README.md  auth.py  pyproject.toml  server.py
