[project]
name = "clockify-mcp"
version = "0.1.0"
description = "Clockify MCP server: time entries, projects, clients, tags, tasks"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
clockify-mcp = "server:mcp.run"
