[project]
name = "github-mcp"
version = "0.1.0"
description = "GitHub MCP server: repos, branches, PRs, files, commits"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
github-mcp = "server:mcp.run"
