[project]
name = "gmail-mcp"
version = "0.1.0"
description = "Gmail MCP server: messages, threads, labels, drafts, send/reply"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gmail-mcp = "server:mcp.run"
