[project]
name = "harvest-mcp"
version = "0.1.0"
description = "Harvest MCP server: time entries, projects, clients, tasks, users, invoices"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
harvest-mcp = "server:mcp.run"
