[project]
name = "jira-mcp"
version = "0.1.0"
description = "Jira MCP server: issues, boards, sprints, projects, comments, transitions"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jira-mcp = "server:mcp.run"
