[project]
name = "looker-dev-mcp"
version = "0.1.0"
description = "Looker developer workflow MCP server: session, git, validation, SQL runner, project files"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
looker-dev-mcp = "server:mcp.run"
