[project]
name = "tableau-mcp"
version = "0.1.0"
description = "Tableau Server MCP server: auth, workbooks, views, metadata GraphQL, downloads"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tableau-mcp = "server:mcp.run"
