[project]
name = "upwork-mcp"
version = "0.1.0"
description = "Upwork MCP server: jobs, contracts, freelancers, time reports, messages, organization"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
upwork-mcp = "server:mcp.run"
